# wasm-vite-template

./: Cargo.toml  Makefile  README.md  build.nix  cargo-generate.toml  flake.nix
.github/: dependabot.yml
src/: lib.rs
www/: bootstrap.js  index.html  package.json
