[package]
name = "{{project-name}}"
description = "{{description}}"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[profile.release]
opt-level = "s" # Tell `rustc` to optimize for small code size.
lto = true

[dependencies]
gloo = "0.11.0"
wasm-bindgen = "0.2.106"
web-sys = "0.3.83"
js-sys = "0.3.83"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }